[package]
authors = ["Andrea Pascal <andrea@anodium.net>"]
description = "Macros for zyciorys"
edition = "2018"
license = "AGPL-3.0"
name = "zyciorys_macros"
publish = false
repository = "https://github.com/anodium/zyciorys.git"
version = "0.1.0"

[dependencies]
syn = "1.0.34"

[lib]
proc-macro = true
