[package]
authors = ["Andrea Pascal <andrea@anodium.net>"]
description = "Macros for zyciorys"
edition = "2018"
license = "AGPL-3.0"
name = "zyciorys-macros"
publish = false
repository = "https://github.com/anodium/zyciorys.git"
version = "0.1.0"

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"

[dependencies.syn]
version = "1.0.34"
features = [
    "full"
]

[lib]
proc-macro = true
